# aiem

./: .gitignore  Cargo.toml  LICENSE  README.md  aiem-user.service  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/aiem-cli/: Cargo.toml
crates/aiem-cli/src/: main.rs
crates/aiem-cli/src/commands/: backup.rs  discover.rs  ide.rs  mcp.rs  mod.rs  profile.rs  secret.rs  skill.rs
crates/aiem-core/: Cargo.toml
crates/aiem-core/src/: backup.rs  discover.rs  error.rs  fs_util.rs  ide.rs  lib.rs  paths.rs  profiles.rs  projects.rs  registry.rs  secrets.rs
crates/aiem-core/src/mcp/: bundles.rs  deploy.rs  github.rs  mod.rs  model.rs  registry.rs  sync.rs
crates/aiem-core/src/mcp/adapters/: claude_code.rs  codex.rs  copilot.rs  cursor.rs  json_mcp.rs  mod.rs
crates/aiem-core/src/skills/: deploy.rs  github.rs  install.rs  mod.rs  model.rs  registry.rs  service.rs
crates/aiem-gui/: Cargo.toml
crates/aiem-gui/src/: app.rs  i18n.rs  main.rs  tasks.rs  theme.rs  ui.rs
crates/aiem-gui/src/views/: discover.rs  ides.rs  mcp.rs  mod.rs  profiles.rs  projects.rs  secrets.rs  settings.rs  skills.rs  store.rs
crates/aiem-web/: Cargo.toml
crates/aiem-web/packaging/: aiem.service
crates/aiem-web/src/: events.rs  fs_merge.rs  layout.rs  lib.rs  state.rs  tasks.rs
crates/aiem-web/src/routes/: discover.rs  events.rs  ides.rs  layout.rs  mcp.rs  mod.rs  profiles.rs  projects.rs  secrets.rs  settings.rs  skills.rs  store.rs
docs/: web-ui.md
packaging/linux/: aiem.desktop
packaging/windows/: aiem.iss
