[workspace]
resolver = "2"
members = ["crates/aiem-core", "crates/aiem-cli", "crates/aiem-gui", "crates/aiem-web"]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
authors = ["aiem contributors"]
license = "MIT"
repository = "https://github.com/Vaxspark/aiem"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
zip = "2"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
futures-util = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", default-features = false }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }
maud = { version = "0.26", features = ["axum"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
