[package]
name = "aiem-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for aiem - unified AI skills & MCP manager"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
dirs.workspace = true
tracing.workspace = true
zip.workspace = true
walkdir.workspace = true
sha2.workspace = true
hex.workspace = true
tempfile.workspace = true
futures-util.workspace = true
regex.workspace = true
chrono.workspace = true
keyring.workspace = true
urlencoding = "2"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
keyring = { version = "3", default-features = false, features = ["linux-native"] }

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
keyring = { version = "3", default-features = false, features = ["linux-native"] }
