[package]
name = "aiem-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "aiem GUI - native desktop app for unified AI skills & MCP management"

[[bin]]
name = "aiem-gui"
path = "src/main.rs"

[dependencies]
aiem-core = { path = "../aiem-core" }
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders"] }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = "0.15"
walkdir.workspace = true
sha2.workspace = true
hex.workspace = true
dark-light = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
